# EXXJOBB

./: README.md  gmon.out  multiquad.launch  test.txt
compression/: CMakeLists.txt  compression.sublime-workspace  package.xml
compression/include/exx_compression/: compression.h
compression/include/intersections/: intersections.h  intersections.hpp
compression/include/plane_extraction/: plane_extraction.h
compression/include/plane_extraction/impl/: plane_extraction.hpp
compression/include/reconstruction/: reconstruction.h
compression/include/reconstruction/impl/: reconstruction.hpp
compression/include/utils/: utils.cpp  utils.h  utils.hpp
compression/msg/: normal.msg  planes.msg
compression/src/: compression.cpp  plane_extraction.cpp  reconstruction.cpp
dataset/: CMakeLists.txt  package.xml
dataset/src/: complete_lower.cpp  copy_waypoints.cpp
dataset_copy/: CMakeLists.txt  package.xml
dataset_copy/src/: copy_waypoints.cpp
test/Ogre/: CMakeLists.txt  package.xml  rosOgre.launch  testApp.launch
test/Ogre/include/: BaseApplication.h  TutorialApplication.h  testApplication.h
test/Ogre/parameters/: lambdatest  lambdatest.cpp  parameters.yaml  testAppParams.yaml
test/Ogre/src/: BaseApplication.cpp  TutorialApplication.cpp  testApplication.cpp
test/compression/: CMakeLists.txt  package.xml  test_compression.launch  test_compression.sublime-workspace
test/compression/include/parameters/: parameters.yaml
test/compression/src/: ogre.sublime-workspace  test_compression.cpp
test/planeDetectionComparison/: CMakeLists.txt  comparison.launch  package.xml  useTestCloud.launch
test/planeDetectionComparison/include/parameters/: parameters.yaml
test/planeDetectionComparison/include/planeDetectionComparison/: cgalTriangulation.h  cgalTriangulationPlus.h  planeSegementationPCL.h  planeSegmentationEfficient.h  planeSegmentationPCL.h  planeSegmentationPPR.h  ppr.h  utils.h
test/planeDetectionComparison/include/planeDetectionComparison/typedef/: typedef.h
test/planeDetectionComparison/include/quadtree/: quadtree.cpp  quadtree.h  quadtree.hpp  quadtreePCL.cpp  quadtreePCL.h  quadtreePCL.hpp  saveOBJFile.h
test/planeDetectionComparison/include/typedefs/: typedef.h
test/planeDetectionComparison/src/: CGALtest.cpp  comparison.cpp  createTestCloud.cpp  meshlab.ply  outCloudEfficientPPR.pcd  quadtree.cpp  quadtreePCL.cpp  testCloud.pcd  testCloud_complete.pcd  testCloud_hurt1.pcd  testMultiplePlanesQuadtree.cpp  testQuadTree.cpp  useTestCloud.cpp
test/statistic/: CMakeLists.txt  package.xml  test_statistic.launch  test_statistic.sublime-workspace  test_statistic_clouds.launch
test/statistic/include/parameters/: hallway-full.txt  kitchen-whole-0.01  office-whole.txt  parameters.yaml  stat-hallway.txt  stat-kitchen.txt  stat-office.txt
test/statistic/src/: ogre.sublime-project  test_statistic.cpp  test_statistic_clouds.cpp
test/surfel/: CMakeLists.txt  package.xml  surfel.launch
test/surfel/include/parameters/: parameters.yaml
test/surfel/src/: package.xml  surfel_test.cpp
voxel/: CMakeLists.txt  CMakelists.txt  super.cpp  voxel_grid.cpp
