<?xml version="1.0"?>
<package>
  <name>exx_dataset_copy</name>
  <version>0.0.0</version>
  <description>EXXJOBB</description>
  <maintainer email="unnar@kth.se">unnar</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

</package>
